--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/styles": "^5.12.3",
     "@mui/x-date-pickers": "^6.4.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
