--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "blob": "^0.1.0",
     "dayjs": "^1.11.7",
+    "downloadjs": "^1.4.7",
     "material-table": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
