--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
@@ -18,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "blob": "^0.1.0",
+    "date-fns": "^2.0.0-beta.5",
     "dayjs": "^1.11.7",
     "downloadjs": "^1.4.7",
     "material-table": "^2.0.3",
