--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "date-fns": "^2.0.0-beta.5",
     "dayjs": "^1.11.7",
     "downloadjs": "^1.4.7",
-    "material-table": "^2.0.3",
+    "material-react-table": "^1.14.0",
+    "material-table": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
